--- a/terraform/config-files/lab-aws.yaml
+++ b/terraform/config-files/lab-aws.yaml
@@ -43,6 +43,10 @@ amis:
     ami: Windows_Server-2016-English-Full-Base-2024.10.09
     owner: '801119661308'
     user: Administrator
+  f5:
+    ami: F5 BIGIP-16.1.5.2-0.0.5 PAYG-Good 25Mbps-241129045520-8e1217d4-a046-4cdf-894e-e38175bae37f
+    owner: 679593333241
+    user: root
 ec2Instances:
   pce:
     vpc: pce-vpc
