--- a/terraform/config-files/lab-aws.yaml
+++ b/terraform/config-files/lab-aws.yaml
@@ -50,7 +50,7 @@ ec2Instances:
     vpc: lab-pce-vpc
     subnet: lab-pce-vpc.subnet-1
     ami: alma9
-    type: m5.2xlarge
+    type: m6a.2xlarge
     volSizeGb: 60
     publicIP: true
     tags:
@@ -59,7 +59,7 @@ ec2Instances:
     vpc: lab-pce-vpc
     subnet: lab-pce-vpc.subnet-1
     ami: alma9
-    type: t3.micro
+    type: t3a.micro
     volSizeGb: 8
     publicIP: true
     tags: {
@@ -69,7 +69,7 @@ ec2Instances:
     vpc: lab-pce-vpc
     subnet: lab-pce-vpc.subnet-1
     ami: alma9
-    type: t3.micro
+    type: t3a.micro
     volSizeGb: 8
     publicIP: true
     tags: {
@@ -79,7 +79,7 @@ ec2Instances:
     vpc: lab-pce-vpc
     subnet: lab-pce-vpc.subnet-2
     ami: alma9
-    type: t3.micro
+    type: t3a.micro
     volSizeGb: 8
     publicIP: true
     tags: {
@@ -89,7 +89,7 @@ ec2Instances:
     vpc: lab-pce-vpc
     subnet: lab-pce-vpc.subnet-2
     ami: alma9
-    type: t3.micro
+    type: t3a.micro
     volSizeGb: 8
     publicIP: true
     tags: {
@@ -114,9 +114,18 @@ ec2Instances:
   #   publicIP: true
   #   tags:
   #     type: nenflowlink
+  # splunk:
+  #   vpc: pce-vpc
+  #   subnet: pce-vpc.subnet-1
+  #   ami: alma9
+  #   type: m6a.2xlarge
+  #   volSizeGb: 60
+  #   publicIP: true
+  #   tags:
+  #    type: splunk
+eksClusters: {}
 rdsInstances: {}
 lambdaFunctions: {}
-eksClusters: {}
 allowedPorts:
   private:
     - from: 22
@@ -128,8 +137,11 @@ allowedPorts:
     - from: 443
       to: 443
       protocol: "tcp"
+    - from: 8080
+      to: 8080
+      protocol: "tcp"
     - from: 8000
-      to: 9000
+      to: 8000
       protocol: "tcp"
     - from: 5140
       to: 5140
@@ -138,8 +150,21 @@ allowedPorts:
       to: 3389
       protocol: "tcp"
   public:
-  - 8443
-  - 8444
-  - 9443
-  - 443
-  - 80
+    - from: 8443
+      to: 8443
+      protocol: "tcp"
+    - from: 8444
+      to: 8444
+      protocol: "tcp"
+    - from: 9443
+      to: 9443
+      protocol: "tcp"
+    - from: 443
+      to: 443
+      protocol: "tcp"
+    - from: 80
+      to: 80
+      protocol: "tcp"
+    - from: 8000
+      to: 8000
+      protocol: "tcp"
