--- a/terraform/config-files/demo-jumpbox-aws.yaml
+++ b/terraform/config-files/demo-jumpbox-aws.yaml
@@ -1,6 +1,7 @@
 ---
 ######### This section should be updated for each deployment #########
 region: us-east-1
+dnsSubDomain: "" # Requires trailing dot (eg., "subdomain."")
 dnsZone: clemenslabs.com
 sshKey: ~/.ssh/id_rsa
 s3FlowLogArn: arn:aws:s3:::global-vpc-flow-logs-se15-us-east-2 # No S3 bucket is created so centralized storage can be used. Put the arn of the S3 bucket here.
