--- a/ansible/roles/demo-jumpbox/tasks/main.yaml
+++ b/ansible/roles/demo-jumpbox/tasks/main.yaml
@@ -74,9 +74,10 @@
   become: true
 
 - name: Add Microsoft repository key (Debian-based systems)
-  ansible.builtin.apt_key:
+  ansible.builtin.get_url:
     url: https://packages.microsoft.com/keys/microsoft.asc
-    state: present
+    dest: /etc/apt/trusted.gpg.d/microsoft.asc
+    mode: '0644'
   when: ansible_facts['os_family'] == 'Debian'
   become: true
 
