update for subdomains

--- a/.gitignore
+++ b/.gitignore
@@ -16,14 +16,14 @@ ansible/aws.hosts
 ansible/azure.hosts
 ansible/demo-jumpbox.hosts
 k8s/*
-terraform/config-files/*
-!terraform/config-files/uc-demo-aws.yaml
-!terraform/config-files/uc-demo-azure.yaml
-!terraform/config-files/lab-aws.yaml
-!terraform/config-files/lab-azure.yaml
-!terraform/config-files/confidential-example.yaml
-!terraform/config-files/demo-jumpbox-aws.yaml
-!terraform/config-files/demo-jumpbox-azure.yaml
+config-files/*
+!config-files/uc-demo-aws.yaml
+!config-files/uc-demo-azure.yaml
+!config-files/lab-aws.yaml
+!config-files/lab-azure.yaml
+!config-files/confidential-example.yaml
+!config-files/demo-jumpbox-aws.yaml
+!config-files/demo-jumpbox-azure.yaml
 *.zip
 *confidential.yaml
 scripts/*.log
