--- a/ansible/roles/linux/tasks/main.yaml
+++ b/ansible/roles/linux/tasks/main.yaml
@@ -41,6 +41,10 @@
   template:
     src: traffic.csv.j2
     dest: /etc/traffic-generator/traffic.csv
+  vars:
+    dns: >-
+      {{ aws_data.dnsZone if aws_data.dnsSubDomain == '' else aws_data.dnsSubDomain ~ '.' ~ aws_data.dnsZone }}
+
 
 - name: run traffic every 10 minutes
   cron:
