--- a/ansible/roles/aws-jumphost/tasks/main.yaml
+++ b/ansible/roles/aws-jumphost/tasks/main.yaml
@@ -45,18 +45,24 @@
     job: "/usr/bin/ansible-playbook /home/ubuntu/ansible/main.yaml -i /home/ubuntu/ansible/aws.hosts --limit '!aws_jh_pub'"
 
 - name: Add to cron - move config files to azure jumphost every hour
+  vars:
+    domain: >-
+      {{ aws_data.dnsZone if aws_data.dnsSubDomain == '' else aws_data.dnsSubDomain ~ '.' ~ aws_data.dnsZone }}
   cron:
     name: move config files to azure jumphost
     minute: "0"
     hour: "*"
-    job: "scp -r /home/ubuntu/terraform/ jumphost02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }}:/home/ubuntu/"
+    job: "scp -r /home/ubuntu/config-files/ jumphost02.{{ domain }}:/home/ubuntu/"
 
-- name: Add to cron - move files to azure jumphost every hour
+- name: Add to cron - move ansible files to azure jumphost every hour
+  vars:
+    domain: >-
+      {{ aws_data.dnsZone if aws_data.dnsSubDomain == '' else aws_data.dnsSubDomain ~ '.' ~ aws_data.dnsZone }}
   cron:
     name: move ansible files to azure jumphost every hour
     minute: "0"
     hour: "*"
-    job: "scp -r /home/ubuntu/ansible/ jumphost02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }}:/home/ubuntu/"
+    job: "scp -r /home/ubuntu/ansible/ jumphost02.{{ domain }}:/home/ubuntu/"
 
 - name: Add to cron - update all other aws servers and azure jumphost every day at 6am
   cron:
@@ -73,7 +79,10 @@
     job: "sudo reboot"
     
 - name: Execute relevant cron jobs now to set up aws servers and move files to azure jumphost
+  vars:
+    domain: >-
+      {{ aws_data.dnsZone if aws_data.dnsSubDomain == '' else aws_data.dnsSubDomain ~ '.' ~ aws_data.dnsZone }}
   shell: |
     /usr/bin/ansible-playbook /home/ubuntu/ansible/main.yaml -i /home/ubuntu/ansible/aws.hosts --limit '!aws_jh_pub'
-    scp -r /home/ubuntu/terraform/ jumphost02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }}:/home/ubuntu/
-    scp -r /home/ubuntu/ansible/ jumphost02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }}:/home/ubuntu/
+    scp -r /home/ubuntu/config-files/ jumphost02.{{ domain }}:/home/ubuntu/
+    scp -r /home/ubuntu/ansible/ jumphost02.{{ domain }}:/home/ubuntu/
