--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ ansible/pce.hosts
 ansible/aws.hosts
 ansible/azure.hosts
 ansible/demo-jumpbox.hosts
+ansible/vars.yaml.*
+!ansible/vars.yaml.demo-jumpbox
 k8s/*
 !k8s/yelb*
 !k8s/php-guestbook*
